feat: tree aside when browsing repo (#11)
